# Student-Management-System

./: .gitignore  CMakeLists.txt  README.md  authenticate.py  key.key  liscense.txt  main.cpp  managerclasses.h  readme.md  source.cpp  user_auth.cpp  user_auth.h  user_auth.hpp
Includes/: handling.cpp  handling.h  managerclasses.cpp  managerclasses.h  user_auth.cpp  user_auth.h  utils.cpp  utils.h
